# experiment-fable-julia-wasm

./: .gitignore  CLAUDE.md  NATIVE_CODEGEN_PHASE_1_COMPLETE.md  NATIVE_CODEGEN_PHASE_2_1_COMPLETE.md  NATIVE_CODEGEN_PHASE_2_2_COMPLETE.md  NATIVE_CODEGEN_PHASE_2_PROGRESS.md  NATIVE_RUNTIME_IMPLEMENTATION_COMPLETE.md  Project.toml  README.md  audit_phase1.jl  audit_phase2.jl  audit_phase3.jl  audit_phase4.jl  audit_phase4.sh  repro_anyref.jl  repro_part2.jl  repro_part3_global.jl  repro_part4_abstract.jl  review_diff.jl  review_diff2.jl  review_diff3.jl  verify2.jl  verify_bool_norm.jl  verify_char_finding.jl  verify_char_from_wire.jl  verify_constfield.jl  verify_findings.jl  verify_fptosi_sat.jl  verify_shift_count.jl  verify_signed_subword.jl  verify_subword_sdiv.jl
.claude/: settings.local.json
.probe/: catchthrow_repro.jl  catchthrow_repro2.jl  layout  layout.c  leak_repro.jl  reentrant_repro.jl  uaf_repro.jl  verify_leak_v2.jl
.repro_global_kind/: globals.wat  globals2.wat  repro.jl  repro_exn.jl  repro_main.jl  repro_statickind.jl
.verify/: funcref_roundtrip.jl  funcref_roundtrip.wat
JSRuntime/: Project.toml
NativeCodegen/: PARSEBANG_UNBLOCKERS.md  Project.toml  README.md
WasmCodegen/: Project.toml
WasmTools/: Project.toml
WasmtimeRunner/: Project.toml
native-backend/: Cargo.toml  README.md
native-backend/src/: compile.rs  lib.rs  types.rs
native-backend/src/runtime/: exceptions.rs  gc.rs  mod.rs  offload.rs  parse_bridge.rs  print.rs  strings.rs
native-builder/: Cargo.toml
native-builder/src/: builder.rs  lib.rs  linker.rs  runtime.rs
(+284 files in other folders)
