[package]
name = "native-backend"
version = "0.1.0"
edition = "2021"
description = "Native codegen backend: Cranelift JIT + Rust runtime for compiled Julia packages"

[lib]
crate-type = ["cdylib"]  # C ABI shared library for Julia ccall

[dependencies]
cranelift-codegen = "0.133"
cranelift-frontend = "0.133"
cranelift-jit = "0.133"
cranelift-reader = "0.133"
cranelift-module = "0.133"
target-lexicon = "0.12"
libc = "0.2"
libloading = "0.8"
bdwgc-alloc = "0.6.13"  # Boehm GC for garbage collection

[build-dependencies]
# none yet (bdwgc will be added in Phase 2)

[profile.release]
lto = true
opt-level = 3
